@@ -2,9 +2,10 @@ package IPC::SRLock;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.27.%d', q$Rev: 3 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.27.%d', q$Rev: 4 $ =~ /\d+/gmx );
 
 use File::DataClass::Types qw( HashRef LoadableClass NonEmptySimpleStr Object );
+use IPC::SRLock::Utils     qw( merge_attributes );
 use Moo;
 
 my $_build__implementation = sub {
@@ -39,11 +40,19 @@ around 'BUILDARGS' => sub {
 
    $attr->{name} //= lc join '_', split m{ :: }mx, __PACKAGE__, -1;
 
+   my $builder = $attr->{builder};
+   my $conf    = $builder && $builder->can( 'config' ) ? $builder->config : 0;
+
+   $conf and $conf->can( 'lock_attributes' )
+         and merge_attributes $attr, $conf->lock_attributes,
+                           [ keys %{ $conf->lock_attributes } ];
+
    my $type = delete $attr->{type}; $attr = { _implementation_attr => $attr };
 
    $type and $type !~ m{ \A ([a-zA-Z0-9\:\+]+) \z }mx
          and die "Type ${type} tainted";
    $type and $attr->{type} = $1;
+
    return $attr;
 };
 
@@ -74,7 +83,7 @@ IPC::SRLock - Set / reset locking semantics to single thread processes
 
 =head1 Version
 
-This documents version v0.27.$Rev: 3 $ of L<IPC::SRLock>
+This documents version v0.27.$Rev: 4 $ of L<IPC::SRLock>
 
 =head1 Synopsis
 
